# ubuntu-wsl-integration

./: .gitignore  51-wsl-motd-news  CONTRIBUTING.md  README.md  TODO  __main__.py  default.json  setup.cfg  setup.py  ubuntu-wsl.conf  wsl-integration.sh
debian/: 51-wsl-motd-news  changelog  control  copyright  files  install  links  ubuntu-wsl.conf  wsl-integration.sh
debian/source/: local-options
po/: POTFILES.in  en_US.po  ubuntuwslctl.pot
ubuntuwslctl/: __init__.py  default.py  helper.py  i18n.py  loader.py  main.py  tui.py
ubuntuwslctl/core/: __init__.py  decor.py  default.py  editor.py  generator.py  handler.py  list.py  util.py
ubuntuwslctl/utils/: __init__.py  actions.py  helper.py  i18n.py
