# coding: utf-8
[metadata]
name = ubuntuwslctl
version = 0.8
description = Ubuntu WSL Utilitiy to manage Ubuntu WSL settings
long_description = file: README.md
author = Patrick Wu
author_email = patrick.wu@canonical.com
keywords = ubuntu wsl
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    setuptools

[options.entry_points]
console_scripts =
    ubuntuwslctl = ubuntuwslctl.main:main

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = ubuntuwslctl
branch = true

[coverage:report]
show_missing = true